# halo-browser

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
lib/: main.dart
lib/models/: ai_service.dart  bookmark.dart  download.dart  history.dart  log_entry.dart  script.dart  tab.dart
lib/providers/: ai_provider.dart  bookmarks_provider.dart  browser_provider.dart  downloads_provider.dart  history_provider.dart  logging_provider.dart  script_engine_provider.dart  settings_provider.dart  theme_provider.dart  window_settings_provider.dart
lib/screens/: bookmarks_screen.dart  browser_screen.dart  developer_tools_screen.dart  downloads_screen.dart  history_screen.dart  settings_screen.dart
lib/widgets/: address_bar.dart  tab_bar.dart  top_menu_bar.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: widget_test.dart
test/providers/: browser_provider_test.dart  theme_provider_test.dart
test/screens/: browser_screen_test.dart
web/: index.html  manifest.json
