[package]
name = "halo-browser"
version = "0.1.0"
description = "A lightning-fast, privacy-focused web browser"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0"
anyhow = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"] 